[package]
name = "sponge-build"
version = "0.2.0"
authors = ["bradinator <imnotamilkglass@gmail.com>"]
edition = "2021"
description = "A powerful rust module to convert Rust to ASM"
license = "MIT"

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
name = "sponge_build"
path = "src/lib.rs"
